# chatserver-and-client

./: CMakeLists.txt  README.md
config/: mysql.conf
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/commonconnectionpool/: CommonConnectionPool.h  Connection.h  log.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/commonconnectionpool/: CommonConnectionPool.cpp  Connection.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
